--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,7 +16,7 @@
   --delta: #ef8746;
 }
 
-body.dark-mode {
+body {
   -webkit-font-smoothing: antialiased;
   background: linear-gradient(135deg, var(--alpha) 0%, var(--beta) 100%);
   @apply text-white;
@@ -26,4 +26,14 @@ body.dark-mode {
 ::selection {
   background: var(--alpha); /* fallback for old browsers */
   color: white;
+}
+
+.overlay {
+  width: 100%;
+  height: 100%;
+  background: var(--black);
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
 }
