--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
   --beta: #0d1117;
   --gamma: #ffd160;
   --delta: #ef8746;
+  --epsilon: #ea5d30;
 }
 
 body {
@@ -24,7 +25,7 @@ body {
 }
 
 ::selection {
-  background: var(--alpha); /* fallback for old browsers */
+  background-color: var(--epsilon); /* fallback for old browsers */
   color: white;
 }
 
