feat: styles and comments in post

--- a/src/feature/home/ui/list-menu/index.css
+++ b/src/feature/home/ui/list-menu/index.css
@@ -1,9 +1,11 @@
 .list-sections {
+  list-style: none;
+  padding: 0;
   a {
     &:hover {
       .line {
         width: 30px;
-        background: var(--gamma);
+        background: var(--primary);
       }
     }
     .line {
