--- a/src/core/ui/list-posts/index.css
+++ b/src/core/ui/list-posts/index.css
@@ -4,13 +4,15 @@
       max-width: 48%;
     }
   }
-  &:hover {
-    .item-post {
-      transition: all 0.4s ease;
-      opacity: 0.3;
-      &:hover {
-        transform: scale(1.1);
-        opacity: 1 !important;
+  @screen lg {
+    &:hover {
+      .item-post {
+        transition: all 0.4s ease;
+        opacity: 0.3;
+        &:hover {
+          transform: scale(1.1);
+          opacity: 1 !important;
+        }
       }
     }
   }
