--- a/src/feature/home/ui/list-repositories/index.css
+++ b/src/feature/home/ui/list-repositories/index.css
@@ -1,11 +1,13 @@
 .list-repositories {
-  &:hover {
-    .item-repository {
-      transition: all 0.4s ease;
-      opacity: 0.4;
-      &:hover {
-        transform: scale(1.1);
-        opacity: 1;
+  @screen lg {
+    &:hover {
+      .item-repository {
+        transition: all 0.4s ease;
+        opacity: 0.4;
+        &:hover {
+          transform: scale(1.1);
+          opacity: 1;
+        }
       }
     }
   }
