--- a/src/layouts/secondary/index.css
+++ b/src/layouts/secondary/index.css
@@ -1,3 +1,11 @@
-.layout-main {
-  flex: 1;
+.post-layout {
+  p,
+  ul,
+  ol {
+    @apply mb-8;
+  }
+  h2,
+  h3 {
+    @apply font-medium text-primary;
+  }
 }
