--- a/src/feature/home/ui/list-menu/index.css
+++ b/src/feature/home/ui/list-menu/index.css
@@ -2,16 +2,17 @@
   list-style: none;
   padding: 0;
   a {
-    &:hover {
+    &:hover,
+    &.active {
       .line {
-        width: 30px;
+        width: 40px;
         background: var(--primary);
       }
     }
     .line {
       transition: all 0.3s ease-in-out;
       content: "";
-      width: 20px;
+      width: 25px;
       height: 1px;
       background: white;
       margin-right: 16px;
