--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,11 +8,12 @@
 
 :root {
   --transparent: transparent;
-  --primary: #cdb27b;
+  --black: black;
+  --primary: #f1ca3c;
   --primary_variant: #ffe2a9;
   --on_primary: white;
   --background: #0d1117;
-  --on_background: rgba(255, 255, 255, 0.7);
+  --on_background: rgba(255, 255, 255, 0.8);
   --surface: #171c23;
   --on_surface: white;
   --error: #b03c28;
@@ -27,14 +28,14 @@ body {
 }
 
 ::selection {
-  background-color: var(--primary); /* fallback for old browsers */
-  color: white;
+  background-color: #20ffd3; /* fallback for old browsers */
+  color: black;
 }
 
 .overlay {
   width: 100%;
   height: 100%;
-  background: var(--primary);
+  background: var(--black);
   position: absolute;
   z-index: 1;
   left: 0;
