--- a/src/core/ui/list-posts/index.css
+++ b/src/core/ui/list-posts/index.css
@@ -7,7 +7,7 @@
   @screen lg {
     &:hover {
       .item-post {
-        transition: all 0.4s ease;
+        transition: all 0.4s ease-in-out;
         opacity: 0.3;
         &:hover {
           transform: scale(1.1);
