--- a/src/feature/home/ui/list-repositories/index.css
+++ b/src/feature/home/ui/list-repositories/index.css
@@ -2,7 +2,7 @@
   @screen lg {
     &:hover {
       .item-repository {
-        transition: all 0.4s ease;
+        transition: all 0.4s ease-in-out;
         opacity: 0.4;
         &:hover {
           transform: scale(1.1);
