--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,7 +49,7 @@ h3 {
 h1 {
   @apply text-3xl font-semibold mb-6 leading-tight;
   @screen lg {
-    @apply text-5xl mb-4;
+    @apply text-4xl mb-4;
   }
 }
 h2 {
@@ -92,4 +92,10 @@ blockquote {
 }
 .gradient-y-transparent-night {
   background: linear-gradient(180deg, rgba(21, 21, 21, 0), var(--background));
+}
+.card-padding {
+  @apply py-4 px-5;
+  @screen lg {
+    @apply p-6;
+  }
 }
