feat: adding web components

--- a/src/feature/home/ui/list-menu/index.css
+++ b/src/feature/home/ui/list-menu/index.css
@@ -6,7 +6,7 @@
     &.active {
       .line {
         width: 40px;
-        background: var(--primary);
+        background: var(--primary-color);
       }
     }
     .line {
